name:                configifier
version:             0.0.2
synopsis:
    parser for config files, shell variables, command line args.
description:
    read your runtime config from config files, shell environment, and
    command line in a uniform, canonical, and flexible way.  this is
    an attempt to build something better on the basis of Configurator,
    cmdargs, optparse-applicative, and similar packages.
license:             AGPL-3
license-file:        LICENSE
author:              Matthias Fischmann
maintainer:          mf@zerobuzz.net
copyright:           zerobuzz.net
category:
build-type:          Simple
cabal-version:       >=1.10

Source-Repository head
  type: git
  location: https://github.com/zerobuzz/configifier

flag profiling
  default: False

library
  hs-source-dirs:
      src
  default-language:
      Haskell2010
  exposed-modules:
      Data.Configifier
  build-depends:
      base >=4.7 && <4.8

    , aeson >=0.8 && <0.9
    , aeson-pretty >=0.7 && <0.8
    , bytestring >=0.10 && <0.11
    , case-insensitive >=1.2 && <1.3
    , containers >=0.5 && <0.6
    , generic-aeson >=0.2 && <0.3
    , lens >=4.6 && <4.7
    , mtl >=2.2.1 && <2.3
    , pretty-show >=1.6.8 && <1.7
    , regex-easy >=0.1.0.0 && <0.2
    , safe >=0.3 && <0.4
    , string-conversions >=0.3 && <0.4
    , text >=1.2 && <1.3
    , unordered-containers >=0.2 && <0.3
    , vector >=0.10 && <0.11
    , yaml >=0.8 && <0.9

executable configifier-example
  default-language:
      Haskell2010
  hs-source-dirs:
      examples
  main-is:
      Main.hs
  other-modules:
  ghc-options:
      -O2 -Wall -threaded -rtsopts
  if flag(profiling)
      ghc-options:
          -auto-all -caf-all -fforce-recomp
  build-depends:
      base
    , configifier

    -- FIXME: clean out these dependencies
    , aeson >=0.8 && <0.9
    , aeson-pretty >=0.7 && <0.8
    , bytestring >=0.10 && <0.11
    , case-insensitive >=1.2 && <1.3
    , containers >=0.5 && <0.6
    , generic-aeson >=0.2 && <0.3
    , hspec
    , hspec-discover
    , lens >=4.6 && <4.7
    , mtl
    , pretty-show
    , QuickCheck
    , regex-easy >=0.1.0.0 && <0.2
    , safe >=0.3 && <0.4
    , scientific
    , string-conversions >=0.3.0.3 && <0.4
    , string-conversions >=0.3 && <0.4
    , text >=1.2 && <1.3
    , unordered-containers >=0.2 && <0.3
    , unordered-containers >= 0.2.5.1 && <0.3
    , vector >=0.10 && <0.11
    , vector >= 0.10.12.2 && <0.11
    , yaml >=0.8 && <0.9

test-suite tests
  default-language:
      Haskell2010
  type:
      exitcode-stdio-1.0
  hs-source-dirs:
      tests
  main-is:
      Spec.hs
  other-modules:
      Data.ConfigifierSpec
    , Spec
    , Test.Arbitrary
  ghc-options:
      -O2 -Wall -threaded -rtsopts
  cpp-options:
      -DGHC_GENERICS
  build-depends:
      base
    , configifier

    , aeson
    , aeson-pretty
    , case-insensitive >=1.2.0.4 && <1.3
    , containers >=0.5.5.1 && <0.6
    , hspec
    , hspec-discover
    , pretty-show
    , QuickCheck
    , scientific
    , string-conversions >=0.3.0.3 && <0.4
    , unordered-containers >=0.2.5.1 && <0.3
    , vector >=0.10.12.2 && <0.11
