name:                configifier
version:             0.0.3
synopsis:
    parser for config files, shell variables, command line args.
description:

    WARNING NOT READY FOR USE YET.  JUST PUTTING IT OUT THERE TO HAVE A DISCUSSION.
    .
    Read runtime configuration from files, command line, and shell
    environment in a uniform, canonical, and flexible way.  Inspired
    by, among others, Configurator, cmdargs, optparse-applicative.

license:             AGPL-3
license-file:        LICENSE
author:              Matthias Fischmann <mf@zerobuzz.net>, Andres Löh <andres@well-typed.com>
maintainer:          Matthias Fischmann <mf@zerobuzz.net>
copyright:           zerobuzz.net
category:            Configuration, Data
build-type:          Simple
cabal-version:       >=1.10

Source-Repository head
  type: git
  location: https://github.com/zerobuzz/configifier

flag profiling
  default: False

library
  hs-source-dirs:
      src
  default-language:
      Haskell2010
  ghc-options:
      -Wall
  exposed-modules:
      Data.Configifier
  build-depends:
      base >=4.7 && <4.8

    , aeson >=0.8 && <0.9
    , case-insensitive >=1.2 && <1.3
    , containers >=0.5 && <0.6
    , either >=4.3 && <4.4
    , mtl >=2.1 && <2.3
    , regex-easy >=0.1.0.0 && <0.2
    , safe >=0.3 && <0.4
    , string-conversions >=0.3 && <0.4
    , unordered-containers >=0.2 && <0.3
    , vector >=0.10 && <0.11
    , yaml >=0.8 && <0.9

executable configifier-example
  default-language:
      Haskell2010
  hs-source-dirs:
      examples
  main-is:
      Main.hs
  other-modules:
  ghc-options:
      -Wall -threaded -rtsopts
  if flag(profiling)
      ghc-options:
          -auto-all -caf-all -fforce-recomp
  build-depends:
      base
    , configifier

    , bytestring >=0.10 && <0.11
    , mtl >=2.1 && <2.3
    , pretty-show >=1.6.8 && <1.7
    , string-conversions >=0.3.0.3 && <0.4
    , text >=1.2 && <1.3
    , yaml >=0.8 && <0.9

test-suite tests
  default-language:
      Haskell2010
  type:
      exitcode-stdio-1.0
  hs-source-dirs:
      tests
  main-is:
      Spec.hs
  other-modules:
      Data.ConfigifierSpec
    , Spec
    , Test.Arbitrary
  ghc-options:
      -Wall -threaded -rtsopts
  cpp-options:
      -DGHC_GENERICS
  build-depends:
      base
    , configifier

    , aeson >= 0.8.0.2 && < 0.9
    , aeson-pretty >= 0.7.2 && < 0.8
    , case-insensitive >= 1.2.0.3 && < 1.3
    , hspec >= 2.1.3 && < 2.2
    , hspec-discover >= 2.1.3 && < 2.2
    , mtl >=2.1 && <2.3
    , pretty-show >= 1.6.8 && < 1.7
    , QuickCheck >= 2.7.6 && < 2.8
    , scientific >= 0.3.3.5 && < 0.4
    , string-conversions >= 0.3.0.3 && < 0.4
    , unordered-containers >= 0.2.5.1 && < 0.3
    , vector >= 0.10.12.2 && < 0.11
